# bazel-rust-research

./: .gitignore  README.md  WORKSPACE.bazel
.github/workflows/: main.yml
hello-rs/: BUILD.bazel
