load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# https://github.com/bazelbuild/rules_rust
http_archive(
    name = "rules_rust",
    sha256 = "30bb05682470f4d4bb03fe67136c55ed2c37d49647ec68de3c9f78d012b15aac",
    strip_prefix = "rules_rust-d72f4a8c7bd1151bfb1ef0fdd300bb69bd4dde2a",
    urls = [
        # Master branch as of 2021-04-23
        "https://github.com/bazelbuild/rules_rust/archive/d72f4a8c7bd1151bfb1ef0fdd300bb69bd4dde2a.tar.gz",
    ],
)

load("@rules_rust//rust:repositories.bzl", "rust_repositories")

rust_repositories()

# Reference https://github.com/bazelbuild/bazel-skylib/
http_archive(
    name = "bazel_skylib",
    urls = [
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.5.0/bazel-skylib-1.5.0.tar.gz",
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.5.0/bazel-skylib-1.5.0.tar.gz",
    ],
    sha256 = "cd55a062e763b9349921f0f5db8c3933288dc8ba4f76dd9416aac68acee3cb94",
)
load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()
